style source-type and hide title

--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -71,12 +71,12 @@
 			min-width: 144px;
 		}
 
-		/deep/ ansyn-overlay-source-type-notice, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+		/deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 			bottom: 0;
 		}
 
 		&.layout1 {
-			/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+			/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 				bottom: @status-bar-height;
 			}
 			div.map-container-wrapper {
@@ -91,7 +91,7 @@
 		}
 
 		&.layout2 {
-			/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+			/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 				bottom: @status-bar-height;
 			}
 			div.map-container-wrapper {
@@ -128,7 +128,7 @@
 					div.active-border {
 						height: @height-minus-status;
 					}
-					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice,/deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 						bottom: @status-bar-height;
 					}
 				}
@@ -146,7 +146,7 @@
 					div.active-border {
 						height: @height-minus-status;
 					}
-					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 						bottom: @status-bar-height;
 					}
 				}
@@ -177,7 +177,7 @@
 					div.active-border {
 						height: @height-minus-status;
 					}
-					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 						bottom: @status-bar-height;
 					}
 				}
@@ -203,7 +203,7 @@
 					div.active-border {
 						height: @height-minus-status;
 					}
-					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 						bottom: @status-bar-height;
 					}
 				}
