--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -20,3 +20,5 @@
 <button (click)="loadImageToCesium()">load Image To Cesium</button>
 
 <button (click)="setMiscOverlays()">set Misc Overlays</button>
+
+<button (click)="setAnnotationsWithIcons()"> Set Annotations with icons</button>
