overlay notification out

--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -64,7 +64,7 @@
 							left: initial;
 							top: initial;
 						}
-						.notification {
+						ansyn-alerts-container {
 							position: initial;
 							right: initial;
 							max-width: initial;
