--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
@@ -3,7 +3,7 @@
 	<ng-container
 		*ngFor="let component of entryComponents.status">
 		<ng-container
-			*ngIf="component.showFirst"
+			*ngIf="component.showFirst && component.TYPE === 'buttons'"
 			[ansynEntryComponent]="{ component: component , mapId: mapId }">
 		</ng-container>
 	</ng-container>
@@ -36,7 +36,7 @@
 	<ng-container
 		*ngFor="let component of entryComponents.status">
 		<ng-container
-			*ngIf="!component.showFirst"
+			*ngIf="!component.showFirst && component.TYPE === 'buttons'"
 			[ansynEntryComponent]="{ component: component , mapId: mapId }">
 		</ng-container>
 	</ng-container>
@@ -54,27 +54,10 @@
 	</div>
 </div>
 
-<div class="notification">
-
-	<ng-container *ngFor="let alert of alerts">
-		<ng-container *ngIf="showAlert(alert.key)">
-
-			<ng-container
-				*ngIf="alert.component; else textAlert"
-				[ansynEntryComponent]="{ component: alert.component, mapId: mapId}">
-			</ng-container>
-
-			<ng-template #textAlert>
-				<div
-					[style.background]="alert.background"
-					[attr.tooltip-value]="alert.text"
-					[attr.tooltip-class]="mapsAmount === 1 ? 'top left': 'bottom left'">
-					{{ alert.text }}
-				</div>
-			</ng-template>
-
-		</ng-container>
+<ng-container
+	*ngFor="let component of entryComponents.status">
+	<ng-container
+		*ngIf="component.TYPE === 'notification'"
+		[ansynEntryComponent]="{ component: component , mapId: mapId }">
 	</ng-container>
-
-</div>
-
+</ng-container>
