Use globals, colors and index less files properly

--- a/src/app/@ansyn/ansyn/less/globals.less
+++ b/src/app/@ansyn/ansyn/less/globals.less
@@ -1,1 +1,7 @@
 @ansyn-menu-width: 430px;
+@status-bar-height: 35px;
+@source-type-notice-width: 40%;
+@welcome-notification-width: 30%;
+@timeline-area-height: 110px;
+@map-search-box-width: 100px;
+@menu-width: 90px;
