--- a/src/app/@ansyn/ansyn/modules/core/components/context-menu/context-menu.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/context-menu/context-menu.component.less
@@ -1,7 +1,8 @@
 @import "ansyn/less/common";
+@import "ansyn/less/colors";
 @import 'ansyn/less/z-index-globals';
 
-@context-menu-color: #0091ff;
+@context-menu-color: @application-primary-color;
 @context-menu-contrast: white;
 
 :host {
