--- a/src/app/@ansyn/map-facade/components/imagery-rotation/imagery-rotation.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-rotation/imagery-rotation.component.less
@@ -1,4 +1,5 @@
-@import "../../less/map-facade";
+@import "ansyn/less/colors";
+@import "ansyn/less/z-index-globals";
 
 @size: 78px;
 @border-width: 3px;
