--- a/src/app/@ansyn/map-facade/components/welcome-notification/welcome-notification.component.less
+++ b/src/app/@ansyn/map-facade/components/welcome-notification/welcome-notification.component.less
@@ -1,4 +1,6 @@
-@import "../../less/map-facade";
+@import "ansyn/less/common";
+@import "ansyn/less/colors";
+@import "ansyn/less/z-index-globals";
 
 :host {
 	position: absolute;
@@ -33,7 +35,7 @@
 			margin-bottom: 1rem;
 		}
 		span.icon-map-pin-point {
-			color: #0091ff;
+			color: @application-primary-color;
 		}
 	}
 }
