--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -1,4 +1,6 @@
-@import "../../less/map-facade";
+@import "ansyn/less/common";
+@import "ansyn/less/colors";
+@import "ansyn/less/z-index-globals";
 
 @height-minus-status: calc(~"100% - @{status-bar-height}");
 
