--- a/src/app/@ansyn/map-facade/components/overlay-source-type-notice/overlay-source-type-notice.component.less
+++ b/src/app/@ansyn/map-facade/components/overlay-source-type-notice/overlay-source-type-notice.component.less
@@ -1,4 +1,7 @@
-@import "../../less/map-facade";
+@import "ansyn/less/common";
+@import "ansyn/less/colors";
+@import "ansyn/less/z-index-globals";
+
 
 :host {
 	position: absolute;
