--- a/src/app/@ansyn/map-facade/components/toast/toast.component.less
+++ b/src/app/@ansyn/map-facade/components/toast/toast.component.less
@@ -1,4 +1,6 @@
-@import "../../less/map-facade";
+@import "ansyn/less/common";
+@import "ansyn/less/colors";
+@import "ansyn/less/z-index-globals";
 
 div.toast {
 	background: rgba(0, 0, 0, 0.7);
