Use colors properly on all application

--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -149,7 +149,7 @@
 				position: relative;
 				height: 100%;
 				.ansynToolsAlone {
-					background: @application-main-color;
+					background: @background-color-3;
 					height: 100%;
 
 				}
