--- a/src/app/@ansyn/ansyn/less/colors.less
+++ b/src/app/@ansyn/ansyn/less/colors.less
@@ -1,9 +1,10 @@
-@status-color: rgba(0, 0, 0, 0.70);
-@application-main-color: rgba(44, 44, 44, 0.91);
 @application-primary-color: #0091ff;
 @application-contrast-color: #8cceff;
-@overlays-dots-color: #8cceff;
-@overlays-dots-color-hover: #fb634e;
-@menu-color: #0e0e0e;  
-@menu-container-color: #1a1a1a;
+@application-secondary-color: #fb634e;
+
+@background-color-0: black;
+@background-color-1: #0e0e0e;
+@background-color-2: #1a1a1a;
+@background-color-3: #2c2c2c;
+
 
