--- a/src/app/@ansyn/ansyn/modules/core/forms/ansyn-checkbox/ansyn-checkbox.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/forms/ansyn-checkbox/ansyn-checkbox.component.less
@@ -53,7 +53,7 @@
 			position: absolute;
 			top: -1px;
 			left: 2px;
-			color: @application-main-color;
+			color: @background-color-3;
 		}
 	}
 
