--- a/src/app/@ansyn/ansyn/modules/core/forms/ansyn-input/ansyn-input.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/forms/ansyn-input/ansyn-input.component.less
@@ -28,11 +28,11 @@
 
 	}
 	/deep/ .mat-focused .mat-form-field-label {
-		color: @application-main-color !important;
+		color: @background-color-3 !important;
 	}
 
 	/deep/ .mat-form-field-ripple {
-		background-color: @application-main-color !important;
+		background-color: @background-color-3 !important;
 	}
 
 	mat-form-field {
