--- a/src/app/@ansyn/ansyn/modules/menu-items/cases/components/delete-case/delete-case.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/cases/components/delete-case/delete-case.component.less
@@ -59,7 +59,7 @@
 					cursor: pointer;
 					background: transparent;
 					border: none;
-					color: @application-main-color;
+					color: @background-color-3;
 					&:hover {
 						font-weight: bold;
 					}
