--- a/src/app/@ansyn/ansyn/modules/menu-items/cases/components/save-case/save-case.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/cases/components/save-case/save-case.component.less
@@ -43,7 +43,7 @@ div.save-case {
 			button {
 				background: transparent;
 				border: none;
-				-webkit-text-fill-color: @application-main-color;
+				-webkit-text-fill-color: @background-color-3;
 				-webkit-text-stroke-width: 0.4px;
 				-webkit-text-stroke-color: transparent;
 				outline: none;
@@ -55,7 +55,7 @@ div.save-case {
 				}
 				&:hover:not(:disabled) {
 					cursor: pointer;
-					-webkit-text-stroke-color: @application-main-color;;
+					-webkit-text-stroke-color: @background-color-3;;
 				}
 			}
 		}
