--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/data-layers-modals/delete-layer/delete-layer.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/data-layers-modals/delete-layer/delete-layer.component.less
@@ -31,7 +31,7 @@ div.edit-layer {
 			button {
 				background: transparent;
 				border: none;
-				-webkit-text-fill-color: @application-main-color;
+				-webkit-text-fill-color: @background-color-3;
 				-webkit-text-stroke-width: 0.4px;
 				-webkit-text-stroke-color: transparent;
 				outline: none;
@@ -43,7 +43,7 @@ div.edit-layer {
 				}
 				&:hover:not(:disabled) {
 					cursor: pointer;
-					-webkit-text-stroke-color: @application-main-color;;
+					-webkit-text-stroke-color: @background-color-3;;
 				}
 			}
 		}
