--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
@@ -1,7 +1,7 @@
 @import "ansyn/less/common";
 
 div.container {
-	background-color: @menu-container-color;
+	background-color: @background-color-2;
 	margin-bottom: 13px;
 	padding: 13px;
 
