--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -10,7 +10,7 @@
 	top: -6px;
 	right: 0;
 	transform: translateX(100%);
-	background: @application-main-color;
+	background: @background-color-3;
 	transition-property: width, visibility;
 	transition-duration: 0.1s;
 	z-index: @z-index-annotations-control;
@@ -130,7 +130,7 @@
 				margin: 0;
 				text-align: center;
 				transition: height 0.3s;
-				background: @application-main-color;
+				background: @background-color-3;
 				.item {
 					cursor: pointer;
 					&:hover, &.selected {
