--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/image-processing-control/image-processing-control.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/image-processing-control/image-processing-control.component.less
@@ -29,7 +29,7 @@
 	top: -7px;
 	right: 0;
 	transform: translateX(100%);
-	background: @application-main-color;
+	background: @background-color-3;
 	transition-property: width;
 	transition-duration: 0.1s;
 	transition-delay: 0s;
