--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/go-to/go-to.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/go-to/go-to.component.less
@@ -8,7 +8,7 @@
 	top: 0;
 	right: 0;
 	transform: translate(100%);
-	background: @application-main-color;
+	background: @background-color-3;
 	visibility: hidden;
 	transition: .2s;
 	z-index: @z-index-go-to-component;
