--- a/src/app/@ansyn/ansyn/modules/overlays/components/overlay-timeline-status/overlay-timeline-status.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/components/overlay-timeline-status/overlay-timeline-status.component.less
@@ -10,8 +10,8 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: rgba(red(@overlays-dots-color), green(@overlays-dots-color), blue(@overlays-dots-color), 0.1);
-	color: @menu-color;
+	background: rgba(red(@application-contrast-color), green(@application-contrast-color), blue(@application-contrast-color), 0.1);
+	color: @background-color-1;
 	font-size: 15px;
 	background: rgba(0, 0, 0, 0.38);
 	.text-container {
@@ -19,14 +19,14 @@
 		top: -10px;
 		background: rgba(255, 255, 255, 1);
 		padding: 7px 50px;
-		border: 0.5px solid @menu-color;
+		border: 0.5px solid @background-color-1;
 		box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24);
 		border-radius: 2px;
 		button.close {
 			position: absolute;
 			top: 1px;
 			right: -2px;
-			color: @menu-color;
+			color: @background-color-1;
 			border: none;
 			background: transparent;
 			cursor: pointer;
