--- a/src/app/@ansyn/ansyn/modules/overlays/components/timeline/timeline.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/components/timeline/timeline.component.less
@@ -1,11 +1,11 @@
 @import "ansyn/less/colors";
 
 circle.active {
-	fill: @application-main-color;
+	fill: @background-color-3;
 	stroke: white;
 }
 
 circle.hover:not(.active), circle.displayed:not(.active) {
-	fill: @overlays-dots-color-hover;
+	fill: @application-secondary-color;
 }
 
