--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
@@ -4,7 +4,7 @@
 @popup-padding-bottom: 15px;
 
 :host {
-	background-color: @status-color;
+	background-color: fade(@background-color-0, 30%);
 	height: @status-bar-height;
 	box-shadow: 0 -10px 20px 0 rgba(0, 0, 0, 0.3);
 	display: flex;
