--- a/src/app/@ansyn/ansyn/modules/status-bar/components/timeline-timepicker/timeline-timepicker.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/timeline-timepicker/timeline-timepicker.component.less
@@ -71,7 +71,7 @@ div.control-buttons {
 	margin-top: 10px;
 	display: flex;
 	justify-content: space-between;
-	color: @overlays-dots-color;
+	color: @application-contrast-color;
 	a {
 		cursor: pointer;
 		&:hover {
