--- a/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
@@ -31,7 +31,7 @@
 		button {
 			background: transparent;
 			border: none;
-			color: @overlays-dots-color;
+			color: @application-contrast-color;
 			&:disabled {
 				cursor: default;
 				pointer-events: none;
@@ -41,7 +41,7 @@
 		margin-top: 10px;
 		display: flex;
 		justify-content: space-between;
-		color: @overlays-dots-color;
+		color: @application-contrast-color;
 		div {
 			button {
 				a {
