--- a/src/app/@ansyn/map-facade/components/imagery-tile-progress/imagery-tile-progress.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-tile-progress/imagery-tile-progress.component.less
@@ -5,7 +5,7 @@
 	position: absolute;
 	z-index: @z-index-map-loader;
 	width: 100%;
-	background-color: @menu-color;
+	background-color: @background-color-1;
 
 	&.lowered {
 		position: absolute;
@@ -16,6 +16,6 @@
 
 	.map-loader {
 		height: 3px;
-		background-color: @overlays-dots-color;
+		background-color: @application-contrast-color;
 	}
 }
