--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.less
@@ -1,5 +1,5 @@
 @import 'ansyn/less/common';
-@import 'ansyn/less/z-index-globals';
+@import "ansyn/less/z-index-globals";
 
 svg {
 	width: 32px;
@@ -46,7 +46,7 @@ i {
 				pointer-events: all;
 				border: 1px solid white;
 				box-sizing: border-box;
-				background-color: @application-main-color;
+				background-color: @background-color-3;
 				color: white;
 				display: flex;
 				align-items: center;
@@ -61,7 +61,7 @@ i {
 				}
 
 				button {
-					background-color: @application-main-color;
+					background-color: @background-color-3;
 					color: white;
 					border: none;
 					outline: none;
@@ -94,7 +94,7 @@ i {
 						margin: 0;
 						text-align: center;
 						transition: height 0.3s;
-						background: @application-main-color;
+						background: @background-color-3;
 						.item {
 							cursor: pointer;
 							&:hover, &.selected {
@@ -129,7 +129,7 @@ i {
 		}
 
 		form.annotation-label-edit {
-			background: @application-main-color;
+			background: @background-color-3;
 			width: 140px;
 			height: 95px;
 			position: absolute;
