--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.less
@@ -9,7 +9,7 @@ div.list {
 	margin: 0;
 	text-align: center;
 	transition: height 0.3s;
-	background: @application-main-color;
+	background: @background-color-3;
 	.item {
 		cursor: pointer;
 		&:hover, &.selected {
