--- a/src/app/app/login/login/login.component.less
+++ b/src/app/app/login/login/login.component.less
@@ -146,7 +146,7 @@
 					font-size: 24px;
 					color: #FBF4F4;
 					box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-					background-color: @application-main-color;
+					background-color: @background-color-3;
 					align-self: center;
 					outline: none;
 					&:disabled {
