--- a/src/app/@ansyn/ansyn/modules/core/forms/combo-box/combo-box.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/forms/combo-box/combo-box.component.less
@@ -51,7 +51,7 @@
 					&:hover {
 						background-color: whitesmoke;
 					}
-					color: @application-main-color
+					color: @background-color-3
 				}
 			}
 
