--- a/src/app/@ansyn/ansyn/modules/menu-items/algorithms/components/remove-task-modal/remove-task-modal.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/algorithms/components/remove-task-modal/remove-task-modal.component.less
@@ -19,7 +19,7 @@ div.remove-task-modal {
 			button {
 				background: transparent;
 				border: none;
-				-webkit-text-fill-color: @application-main-color;
+				-webkit-text-fill-color: @background-color-3;
 				-webkit-text-stroke-width: 0.4px;
 				-webkit-text-stroke-color: transparent;
 				outline: none;
@@ -31,7 +31,7 @@ div.remove-task-modal {
 				}
 				&:hover:not(:disabled) {
 					cursor: pointer;
-					-webkit-text-stroke-color: @application-main-color;;
+					-webkit-text-stroke-color: @background-color-3;;
 				}
 			}
 		}
