--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -46,7 +46,7 @@
 			pointer-events: none;
 
 			&.active {
-				border: solid 3px @application-main-color;
+				border: solid 3px @background-color-3;
 			}
 		}
 		/deep/ .ol-mouse-position {
