--- a/src/app/@ansyn/map-facade/components/imagery-rotation/imagery-rotation.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-rotation/imagery-rotation.component.less
@@ -23,7 +23,7 @@
 		position: absolute;
 		z-index: @z-index-map-rotation;
 
-		border: @border-width solid @menu-color;
+		border: @border-width solid @background-color-1;
 		border-radius: 50%;
 		box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.5), inset 0 0 0 1px rgba(255, 255, 255, 0.5);
 	}
