Add annotation icons and fix more colors

--- a/src/app/@ansyn/ansyn/less/colors.less
+++ b/src/app/@ansyn/ansyn/less/colors.less
@@ -6,5 +6,6 @@
 @background-color-1: #0e0e0e;
 @background-color-2: #1a1a1a;
 @background-color-3: #2c2c2c;
-
+@background-color-4: #373738;
+@background-color-5: #4c4c4c;
 
