--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/projections/geo/geo.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/projections/geo/geo.component.less
@@ -1,3 +1,7 @@
+@import 'ansyn/less/common';
+@import 'ansyn/less/colors';
+@import "ansyn/less/z-index-globals";
+
 :host {
 	box-sizing: border-box;
 	display: flex;
@@ -8,7 +12,6 @@
 		display: flex;
 		margin-top: 5px;
 		.input-box {
-
 			margin-right: 5px;
 			padding: 0 10px;
 			&:last-child {
@@ -22,7 +25,7 @@
 				width: 100%;
 				background: transparent;
 				border: none;
-				border-bottom: 1px solid #229db6;
+				border-bottom: 1px solid @application-primary-color;
 				outline: none;
 				color: white;
 				font-size: 14px;
