--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.less
@@ -1,4 +1,5 @@
 @import 'ansyn/less/common';
+@import "ansyn/less/colors";
 @import "ansyn/less/z-index-globals";
 
 svg {
@@ -72,7 +73,7 @@ i {
 					font-size: 28px;
 
 					&.active, &:hover {
-						background-color: rgb(41, 127, 155);
+						background-color: @application-primary-color;
 					}
 				}
 
