--- a/src/app/@ansyn/ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/ansyn/assets/styles/icons.css
@@ -1,17 +1,17 @@
 
 .icon-icon-add:before { content: '\e800'; }
-.icon-icon-annotation-arrow:before { content: '\e801'; }
-.icon-icon-annotation-circle:before { content: '\e802'; }
-.icon-icon-annotation-color:before { content: '\e803'; }
-.icon-icon-annotation-line:before { content: '\e804'; }
-.icon-icon-annotation-point:before { content: '\e805'; }
-.icon-icon-annotation-polygon:before { content: '\e806'; }
+.icon-annotation-arrow:before { content: '\e801'; }
+.icon-annotation-circle:before { content: '\e802'; }
+.icon-annotation-color:before { content: '\e803'; }
+.icon-annotation-line:before { content: '\e804'; }
+.icon-annotation-point:before { content: '\e805'; }
+.icon-annotation-polygon:before { content: '\e806'; }
 .old-icon-main-tools:before { content: '\e807'; }
-.icon-icon-annotation-weight:before { content: '\e808'; }
-.icon-icon-anotations:before { content: '\e809'; }
+.icon-annotation-weight:before { content: '\e808'; }
+.icon-annotations:before { content: '\e809'; }
 .icon-icon-automatic-image-processing:before { content: '\e80a'; }
 .icon-icon-back-to-base-map:before { content: '\e80b'; }
-.icon-icon-close:before { content: '\e80c'; }
+.icon-close:before { content: '\e80c'; }
 .icon-icon-delete:before { content: '\e80d'; }
 .icon-icon-edit:before { content: '\e80e'; }
 .icon-icon-export:before { content: '\e80f'; }
@@ -74,7 +74,6 @@
 .icon-status-bar-orientation:before { content: '\e90d'; }
 .icon-import:before { content: '\e90e'; }
 .icon-polygon:before { content: '\e90f'; }
-.icon-Anotations:before { content: '\e910'; }
 .icon-status-bar-geo:before { content: '\e911'; }
 .icon-tools-polygons:before { content: '\e912'; }
 .icon-tools-image-processing:before { content: '\e913'; }
@@ -117,15 +116,7 @@
 .icon-delete:before { content: '\e943'; }
 .icon-edit:before { content: '\e944'; }
 .icon-share:before { content: '\e945'; }
-.icon-close:before { content: '\e947'; }
-.icon-annotation-point:before { content: '\e948'; }
-.icon-annotation-line:before { content: '\e949'; }
-.icon-annotation-polygon:before { content: '\e94a'; }
-.icon-annotation-circle:before { content: '\e94b'; }
 .icon-annotation-square:before { content: '\e94c'; }
-.icon-annotation-arrow:before { content: '\e94d'; }
-.icon-annotation-weight:before { content: '\e94e'; }
-.icon-annotation-color:before { content: '\e94f'; }
 .icon-annotation-duplicate:before { content: '\e951'; }
 .icon-layers-hide:before { content: '\e954'; }
 .icon-status-bar-show-pin-point:before { content: '\e956'; }
