--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/slider-filter-container/slider-filter-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/slider-filter-container/slider-filter-container.component.less
@@ -1,3 +1,5 @@
+@import "ansyn/less/colors";
+
 .upper-row {
 	display: flex;
 	flex-direction: row;
@@ -26,7 +28,7 @@
 			width: 100%;
 			height: 2px;
 			top: 50%;
-			background-color: rgba(255, 255, 255, 0.25);;
+			background-color: @background-color-5;
 		}
 	}
 
