--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -1,4 +1,5 @@
 @import "ansyn/less/common";
+@import "ansyn/less/colors";
 @import "ansyn/less/z-index-globals";
 
 @tools-box-width: 296px;
@@ -86,7 +87,7 @@
 				font-size: 35px;
 			}
 			&:hover:not(.mode-on), &.mode-on {
-				background-color: rgb(41, 127, 155);
+				background-color: @application-primary-color;
 			}
 
 			&.spliter {
