--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/overlays-display-mode/overlays-display-mode.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/overlays-display-mode/overlays-display-mode.component.html
@@ -8,7 +8,7 @@
 			   value="None"/>
 
 		<label [for]="radioIds.switchNone">
-			<i class="icon-close-small"></i>
+			<i class="icon-close"></i>
 		</label>
 		<input type="radio"
 			   [id]="radioIds.switchHeatMap"
