--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/overlays-display-mode/overlays-display-mode.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/overlays-display-mode/overlays-display-mode.component.less
@@ -1,3 +1,4 @@
+@import "ansyn/less/colors";
 @import "ansyn/less/z-index-globals";
 
 :host {
@@ -7,7 +8,7 @@
 	top: 0;
 	right: 0;
 	transform: translate(100%);
-	background: #1c8094;
+	background: @background-color-4;
 	visibility: hidden;
 	transition: .2s;
 	z-index: @z-index-overlays-display-mode-component;
@@ -45,26 +46,21 @@
 
 	.switch-field label {
 		flex-grow: 1;
-		background-color: #1c8094;
+		background-color: @background-color-4;
 		color: white;
 		font-size: 24px;
 		font-weight: normal;
 		text-align: center;
 		text-shadow: none;
-		padding: 2px 6px;
-		border: 1px solid rgba(0, 0, 0, 0.2);
-		box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
 		//transition: all 0.1s ease-in-out;
 		cursor: pointer;
 		&:hover {
-			background-color: #2e2d46;
-			box-shadow: none;
+			background-color: @background-color-5;
 		}
 	}
 
 	.switch-field input:checked + label {
-		background-color: #2e2d46;
-		box-shadow: none;
+		background-color: @background-color-5;
 	}
 
 	.switch-field input:disabled + label {
