--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/projections/utm/utm.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/projections/utm/utm.component.html
@@ -10,7 +10,7 @@
 <div class="inputs">
 	<ng-template [ngIf]="coordinates">
 		<div class="input-box">
-			<label for="utm-x-input">x</label>
+			<label for="utm-x-input">X</label>
 			<input id="utm-x-input" type="number"
 				   [(ngModel)]="coordinates[0]"
 				   name="x"
@@ -19,7 +19,7 @@
 				   autocomplete="false"/>
 		</div>
 		<div class="input-box">
-			<label for="utm-y-input">y</label>
+			<label for="utm-y-input">Y</label>
 			<input id="utm-y-input"
 				   type="number"
 				   [(ngModel)]="coordinates[1]"
