--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -81,13 +81,13 @@
 
 		& > li {
 			list-style-type: none;
-
+			padding: 1px;
 			span {
 				color: white;
-				font-size: 35px;
+				font-size: 28px;
 			}
 			&:hover:not(.mode-on), &.mode-on {
-				background-color: @application-primary-color;
+				background-color: @background-color-5;
 			}
 
 			&.spliter {
@@ -97,10 +97,12 @@
 				margin: 0 4px;
 				div {
 					height: 70%;
-					border: 1px solid black;
+					border: 1px solid @background-color-5;
 					opacity: 0.4;
 				}
-
+				&:hover {
+					background-color: initial;
+				}
 			}
 			&:last-child {
 				padding-right: 2px;
@@ -117,7 +119,7 @@
 			position: relative;
 
 			button.expand {
-				background-color: #297f9b;
+				background-color: @background-color-5;
 			}
 
 			div.list {
@@ -135,7 +137,7 @@
 				.item {
 					cursor: pointer;
 					&:hover, &.selected {
-						background-color: #297f9b;
+						background-color: @background-color-5;
 					}
 				}
 
