--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/go-to/go-to.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/go-to/go-to.component.html
@@ -1,4 +1,4 @@
-<button class="close" (click)="close()">×</button>
+<button class="close" (click)="close()"><i class="icon-close"></i></button>
 
 <form #form="ngForm" (ngSubmit)="submitGoTo()">
 
@@ -52,8 +52,8 @@
 		<button ansynButton type="submit" [disabled]="form.invalid || disabled">Go</button>
 		<button [disabled]="disabled" class="pin-location" type="button" (click)="togglePinLocation()"
 				[class.active]="pinLocationMode">
+				<i class="icon-tools-pin"></i>
 			<span>Pin location</span>
-			<i class="icon-tools-pin"></i>
 		</button>
 	</div>
 
