--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/go-to/go-to.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/go-to/go-to.component.less
@@ -1,4 +1,5 @@
 @import "ansyn/less/common";
+@import "ansyn/less/colors";
 @import "ansyn/less/z-index-globals";
 
 :host {
@@ -16,41 +17,42 @@
 	&.expand {
 		form {
 			visibility: visible;
-			display: flex;
 			opacity: 1;
+			padding: 20px 24px;
 		}
 		visibility: visible;
-		width: 320px;
-		height: 200px;
+		width: auto;
+		height: auto;
 	}
 	button.close {
 		position: absolute;
-		right: 0;
-		color: white;
-		border: none;
-		background: transparent;
-		cursor: pointer;
-		outline: none;
+    right: 10px;
+    top: 7px;
+    color: white;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    outline: none;
+    font-size: 28px;
 		z-index: @z-index-go-to-close;
 		&:hover {
-			color: #2e2d46;
+			opacity: 0.9;
 		}
 	}
 	form {
 		opacity: 0;
 		transition: visibility 0s linear .2s;
 		visibility: hidden;
-		display: flex;
 		flex-direction: column;
-		justify-content: space-around;
+		justify-content: space-between;
 		height: 100%;
 		box-sizing: border-box;
 
 		div.buttons-area {
 			display: flex;
 			width: 100%;
-			justify-content: space-around;
-			margin-top: 5px;
+			justify-content: space-between;
+			margin-top: 24px;
 			button {
 				outline: none;
 			}
@@ -58,18 +60,21 @@
 			button.pin-location {
 				background: transparent;
 				border: none;
-				color: white;
+				color: fade(white, 40%);
 				display: flex;
 				font-size: 14px;
 				align-items: center;
-				opacity: .7;
+				i {
+					margin-top: 5px;
+				}
 				&.active {
 					opacity: 1;
 				}
 			}
 
 			button[type='submit'] {
-				width: 83px;
+				width: 74px;
+				height: 30px;
 			}
 		}
 
