--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/overlays-display-mode/overlays-display-mode.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/overlays-display-mode/overlays-display-mode.component.less
@@ -48,7 +48,7 @@
 		flex-grow: 1;
 		background-color: @background-color-4;
 		color: white;
-		font-size: 24px;
+		font-size: 2em;
 		font-weight: normal;
 		text-align: center;
 		text-shadow: none;
