Fix image processing control style

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/image-processing-control/image-processing-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/image-processing-control/image-processing-control.component.html
@@ -1,15 +1,20 @@
 <div class="image-processing-container">
-	<div class="resetAll" (click)="resetParams()">Reset all</div>
+	<div class="title-wrapper">
+		<label class="title">Manual Image Enhancement</label>
+		<div class="resetAll" (click)="resetParams()">Reset all</div>
+	</div>
 	<ul class="image-processing-options">
 		<li *ngFor="let param of params">
 			<label [for]="'image-processing-' + param">{{param.name}}</label><br>
-			<input [id]="'image-processing-' + param"
-				   type="range"
-				   [min]="param.min"
-				   [max]="param.max"
-				   [ngModel]="imageManualProcessArgs[param.name]"
-				   (ngModelChange)="updateParam($event, param.name)">
-			<button class="button-reset" (click)="resetOne(param)">reset</button>
+			<div class="input-wrapper">
+				<input [id]="'image-processing-' + param"
+						 type="range"
+						 [min]="param.min"
+						 [max]="param.max"
+						 [ngModel]="imageManualProcessArgs[param.name]"
+						 (ngModelChange)="updateParam($event, param.name)">
+				<button class="button-reset" (click)="resetOne(param)">Reset</button>
+			</div>
 		</li>
 	</ul>
 </div>
