--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.less
@@ -38,7 +38,7 @@
 				}
 
 				&.mode-on {
-					border: 1px solid #09F9E8;
+					border: 1px solid @application-contrast-color;
 				}
 
 				&:hover:not(:disabled), &.active {
