--- a/src/app/@ansyn/ansyn/less/colors.less
+++ b/src/app/@ansyn/ansyn/less/colors.less
@@ -8,4 +8,5 @@
 @background-color-3: #2c2c2c;
 @background-color-4: #373738;
 @background-color-5: #4c4c4c;
-
+@background-color-6: #5c5c5c;
+@background-color-7: #d8d8d8;
