Add hover effects

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/image-processing-control/image-processing-control.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/image-processing-control/image-processing-control.component.less
@@ -64,6 +64,10 @@
 				margin-top: 5px;
 				font-size: 9px;
 				cursor: pointer;
+				&:hover {
+					cursor: pointer;
+					color: @background-color-7;
+				} 
 			}
 		}
 		ul.image-processing-options {
@@ -86,7 +90,8 @@
 					color: @background-color-6;
 					font-size: 9px;
 					&:hover {
-						text-decoration: underline;
+						cursor: pointer;
+						color: @background-color-7;
 					}
 				}
 				.track() {
