--- a/src/app/@ansyn/ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/ansyn/assets/styles/icons.css
@@ -1,126 +1,101 @@
 
-.icon-icon-add:before { content: '\e800'; }
-.icon-annotation-arrow:before { content: '\e801'; }
-.icon-annotation-circle:before { content: '\e802'; }
-.icon-annotation-color:before { content: '\e803'; }
-.icon-annotation-line:before { content: '\e804'; }
-.icon-annotation-point:before { content: '\e805'; }
-.icon-annotation-polygon:before { content: '\e806'; }
-.old-icon-main-tools:before { content: '\e807'; }
-.icon-annotation-weight:before { content: '\e808'; }
-.icon-annotations:before { content: '\e809'; }
-.icon-icon-automatic-image-processing:before { content: '\e80a'; }
-.icon-icon-back-to-base-map:before { content: '\e80b'; }
-.icon-close:before { content: '\e80c'; }
-.icon-icon-delete:before { content: '\e80d'; }
-.icon-icon-edit:before { content: '\e80e'; }
-.icon-icon-export:before { content: '\e80f'; }
-.icon-icon-favorites_2:before { content: '\e810'; }
-.icon-icon-favorites:before { content: '\e811'; }
-.icon-frame-mode:before { content: '\e812'; }
-.icon-icon-import:before { content: '\e813'; }
-.icon-icon-input_filter:before { content: '\e814'; }
-.icon-icon-layers-hide:before { content: '\e815'; }
-.icon-icon-layers-show:before { content: '\e816'; }
-.icon-icon-link-copy:before { content: '\e817'; }
-.icon-icon-link:before { content: '\e818'; }
-.icon-main-cases:before { content: '\e819'; }
-.icon-main-data-layers:before { content: '\e81a'; }
-.icon-main-filters:before { content: '\e81b'; }
-.icon-main-help:before { content: '\e81c'; }
-.icon-main-tools:before { content: '\e81d'; }
-.icon-icon-quick-loop-add:before { content: '\e81e'; }
-.icon-main-uploads:before { content: '\e81f'; }
-.icon-icon-pin:before { content: '\e820'; }
-.icon-icon-quick-loop:before { content: '\e821'; }
-.icon-icon-remove-overlay:before { content: '\e822'; }
-.icon-icon-screen-1:before { content: '\e823'; }
-.icon-icon-screen-2:before { content: '\e824'; }
-.icon-icon-screen-3:before { content: '\e825'; }
-.icon-icon-screen-4:before { content: '\e826'; }
-.icon-icon-screen-5:before { content: '\e827'; }
-.icon-icon-screen-6:before { content: '\e828'; }
-.icon-icon-shadow-mouse:before { content: '\e829'; }
-.old-icon-main-filters:before { content: '\e82a'; }
-.old-icon-main-data-layers:before { content: '\e82b'; }
-.old-icon-main-cases:before { content: '\e82c'; }
-.icon-icon-status-bar-imagery-count:before { content: '\e82d'; }
-.icon-icon-status-bar-next:before { content: '\e82e'; }
-.icon-icon-status-bar-prev:before { content: '\e82f'; }
-.icon-icon-status-bar-time:before { content: '\e830'; }
-.icon-icon-temporary-link:before { content: '\e831'; }
-.icon-tools-heatmap:before { content: '\e832'; }
-.icon-icon-tools-go-to:before { content: '\e833'; }
-.icon-icon-tools-image-processing:before { content: '\e834'; }
-.icon-icon-tools-ruler:before { content: '\e835'; }
-.icon-icon-unpin:before { content: '\e836'; }
-.icon-icon-upload-button:before { content: '\e837'; }
-.icon-icon-status-bar-geo:before { content: '\e838'; }
-.icon-icon-status-bar-case:before { content: '\e839'; }
-.icon-icon-share:before { content: '\e83a'; }
-.icon-screen-1:before { content: '\e900'; }
-.icon-screen-2:before { content: '\e901'; }
-.icon-screen-3:before { content: '\e902'; }
-.icon-screen-4:before { content: '\e903'; }
-.icon-screen-5:before { content: '\e904'; }
-.icon-screen-6:before { content: '\e905'; }
-.icon-context-menu-next:before { content: '\e906'; }
-.icon-context-menu-prev:before { content: '\e907'; }
-.icon-context-menu-angle:before { content: '\e908'; }
-.icon-map-pin-point:before { content: '\e909'; }
-.icon-context-menu-first:before { content: '\e90a'; }
-.icon-context-menu-last:before { content: '\e90b'; }
-.icon-status-bar-case:before { content: '\e90c'; }
-.icon-status-bar-orientation:before { content: '\e90d'; }
-.icon-import:before { content: '\e90e'; }
-.icon-polygon:before { content: '\e90f'; }
-.icon-status-bar-geo:before { content: '\e911'; }
-.icon-tools-polygons:before { content: '\e912'; }
-.icon-tools-image-processing:before { content: '\e913'; }
-.icon-save:before { content: '\e914'; }
-.icon-status-bar-share-link:before { content: '\e915'; }
-.icon-shadow-mouse:before { content: '\e916'; }
-.icon-help:before { content: '\e917'; }
-.icon-input_filter:before { content: '\e918'; }
-.icon-export:before { content: '\e919'; }
-.icon-add:before { content: '\e91a'; }
-.icon-loop:before { content: '\e91b'; }
-.icon-Frame-84-1:before { content: '\e91c'; }
-.icon-status-bar-expand:before { content: '\e91d'; }
-.icon-drop:before { content: '\e91e'; }
-.icon-status-bar-time:before { content: '\e91f'; }
-.icon-tools-height:before { content: '\e920'; }
-.icon-main-algorithms:before { content: '\e921'; }
-.icon-tools-ruler:before { content: '\e922'; }
-.icon-main-settings:before { content: '\e923'; }
-.icon-favorites:before { content: '\e924'; }
-.icon-status-bar-prev:before { content: '\e925'; }
-.icon-status-bar-next:before { content: '\e926'; }
-.icon-status-bar-alert:before { content: '\e927'; }
-.icon-sync:before { content: '\e928'; }
-.icon-no-of-screens:before { content: '\e929'; }
-.icon-measure-:before { content: '\e92a'; }
-.icon-Frame-461-3:before { content: '\e92b'; }
-.icon-tools-go-to:before { content: '\e92c'; }
-.icon-tools-pin:before { content: '\e92d'; }
-.icon-automatic-image-processing:before { content: '\e92e'; }
-.icon-status-bar-imagery-count:before { content: '\e92f'; }
-.icon-label:before { content: '\e930'; }
-.icon-color:before { content: '\e932'; }
-.icon-weight:before { content: '\e933'; }
-.icon-restore:before { content: '\e934'; }
-.icon-tools-toggle:before { content: '\e939'; }
-.icon-entity-time-line:before { content: '\e940'; }
-.icon-tools-export:before { content: '\e942'; }
-.icon-delete:before { content: '\e943'; }
-.icon-edit:before { content: '\e944'; }
-.icon-share:before { content: '\e945'; }
-.icon-annotation-square:before { content: '\e807'; }
-.icon-annotation-duplicate:before { content: '\e951'; }
-.icon-layers-hide:before { content: '\e954'; }
-.icon-status-bar-show-pin-point:before { content: '\e956'; }
-.icon-temporary-link:before { content: '\e957'; }
-.icon-permanent-link:before { content: '\e958'; }
-.icon-context-menu-best:before { content: '\e95b'; }
-.icon-remove-from-case:before { content: '\e978'; }
-.icon-reset-timeline:before { content: '\e97a'; }
+.icon-add:before { content: '\e800'; } /* '' */
+.icon-annotation-arrow:before { content: '\e801'; } /* '' */
+.icon-annotation-circle:before { content: '\e802'; } /* '' */
+.icon-annotation-color:before { content: '\e803'; } /* '' */
+.icon-annotation-line:before { content: '\e804'; } /* '' */
+.icon-annotation-point:before { content: '\e805'; } /* '' */
+.icon-annotation-polygon:before { content: '\e806'; } /* '' */
+.icon-annotation-weight:before { content: '\e808'; } /* '' */
+.icon-annotations:before { content: '\e809'; } /* '' */
+.icon-automatic-image-processing:before { content: '\e80a'; } /* '' */
+.icon-back-to-base-map:before { content: '\e80b'; } /* '' */
+.icon-close:before { content: '\e80c'; } /* '' */
+.icon-delete:before { content: '\e80d'; } /* '' */
+.icon-edit:before { content: '\e80e'; } /* '' */
+.icon-export:before { content: '\e80f'; } /* '' */
+.icon-favorites_2:before { content: '\e810'; } /* '' */
+.icon-favorites:before { content: '\e811'; } /* '' */
+.icon-frame-mode:before { content: '\e812'; } /* '' */
+.icon-import:before { content: '\e813'; } /* '' */
+.icon-input_filter:before { content: '\e814'; } /* '' */
+.icon-layers-hide:before { content: '\e815'; } /* '' */
+.icon-layers-show:before { content: '\e816'; } /* '' */
+.icon-link-copy:before { content: '\e817'; } /* '' */
+.icon-link:before { content: '\e818'; } /* '' */
+.icon-main-cases:before { content: '\e819'; } /* '' */
+.icon-main-data-layers:before { content: '\e81a'; } /* '' */
+.icon-main-filters:before { content: '\e81b'; } /* '' */
+.icon-main-help:before { content: '\e81c'; } /* '' */
+.icon-main-tools:before { content: '\e81d'; } /* '' */
+.icon-quick-loop-add:before { content: '\e81e'; } /* '' */
+.icon-main-uploads:before { content: '\e81f'; } /* '' */
+.icon-pin:before { content: '\e820'; } /* '' */
+.icon-quick-loop:before { content: '\e821'; } /* '' */
+.icon-remove-overlay:before { content: '\e822'; } /* '' */
+.icon-screen-1:before { content: '\e823'; } /* '' */
+.icon-screen-2:before { content: '\e824'; } /* '' */
+.icon-screen-3:before { content: '\e825'; } /* '' */
+.icon-screen-4:before { content: '\e826'; } /* '' */
+.icon-screen-5:before { content: '\e827'; } /* '' */
+.icon-screen-6:before { content: '\e828'; } /* '' */
+.icon-shadow-mouse:before { content: '\e829'; } /* '' */
+.icon-status-bar-imagery-count:before { content: '\e82d'; } /* '' */
+.icon-status-bar-next:before { content: '\e82e'; } /* '' */
+.icon-status-bar-prev:before { content: '\e82f'; } /* '' */
+.icon-status-bar-time:before { content: '\e830'; } /* '' */
+.icon-temporary-link:before { content: '\e831'; } /* '' */
+.icon-tools-heatmap:before { content: '\e832'; } /* '' */
+.icon-tools-go-to:before { content: '\e833'; } /* '' */
+.icon-tools-image-processing:before { content: '\e834'; } /* '' */
+.icon-tools-ruler:before { content: '\e835'; } /* '' */
+.icon-unpin:before { content: '\e836'; } /* '' */
+.icon-upload-button:before { content: '\e837'; } /* '' */
+.icon-status-bar-geo:before { content: '\e838'; } /* '' */
+.icon-status-bar-case:before { content: '\e839'; } /* '' */
+.icon-share:before { content: '\e83a'; } /* '' */
+.icon-annotation-square:before { content: '\e842'; } /* '' */
+.icon-screen-7:before { content: '\e85e'; } /* '' */
+.icon-screen-8:before { content: '\e85f'; } /* '' */
+.icon-screen-9:before { content: '\e860'; } /* '' */
+.icon-screen-10:before { content: '\e861'; } /* '' */
+.icon-screen-11:before { content: '\e862'; } /* '' */
+.icon-screen-12:before { content: '\e863'; } /* '' */
+.icon-context-menu-next:before { content: '\e906'; } /* '' */
+.icon-context-menu-prev:before { content: '\e907'; } /* '' */
+.icon-context-menu-angle:before { content: '\e908'; } /* '' */
+.icon-map-pin-point:before { content: '\e909'; } /* '' */
+.icon-context-menu-first:before { content: '\e90a'; } /* '' */
+.icon-context-menu-last:before { content: '\e90b'; } /* '' */
+.icon-status-bar-orientation:before { content: '\e90d'; } /* '' */
+.icon-polygon:before { content: '\e90f'; } /* '' */
+.icon-tools-polygons:before { content: '\e912'; } /* '' */
+.icon-save:before { content: '\e914'; } /* '' */
+.icon-status-bar-share-link:before { content: '\e915'; } /* '' */
+.icon-help:before { content: '\e917'; } /* '' */
+.icon-loop:before { content: '\e91b'; } /* '' */
+.icon-Frame-84-1:before { content: '\e91c'; } /* '' */
+.icon-status-bar-expand:before { content: '\e91d'; } /* '' */
+.icon-drop:before { content: '\e91e'; } /* '' */
+.icon-tools-height:before { content: '\e920'; } /* '' */
+.icon-main-algorithms:before { content: '\e921'; } /* '' */
+.icon-main-settings:before { content: '\e923'; } /* '' */
+.icon-status-bar-alert:before { content: '\e927'; } /* '' */
+.icon-sync:before { content: '\e928'; } /* '' */
+.icon-no-of-screens:before { content: '\e929'; } /* '' */
+.icon-measure-:before { content: '\e92a'; } /* '' */
+.icon-Frame-461-3:before { content: '\e92b'; } /* '' */
+.icon-tools-pin:before { content: '\e92d'; } /* '' */
+.icon-label:before { content: '\e930'; } /* '' */
+.icon-color:before { content: '\e932'; } /* '' */
+.icon-weight:before { content: '\e933'; } /* '' */
+.icon-restore:before { content: '\e934'; } /* '' */
+.icon-tools-toggle:before { content: '\e939'; } /* '' */
+.icon-entity-time-line:before { content: '\e940'; } /* '' */
+.icon-tools-export:before { content: '\e942'; } /* '' */
+.icon-annotation-duplicate:before { content: '\e951'; } /* '' */
+.icon-status-bar-show-pin-point:before { content: '\e956'; } /* '' */
+.icon-permanent-link:before { content: '\e958'; } /* '' */
+.icon-context-menu-best:before { content: '\e95b'; } /* '' */
+.icon-remove-from-case:before { content: '\e978'; } /* '' */
+.icon-reset-timeline:before { content: '\e97a'; } /* '' */
