--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -52,13 +52,14 @@
 		.selected-layer {
 			visibility: visible;
 		}
-		width: @tools-box-width;
+		width: initial;
 		transition-delay: 0.1s;
 		ul.annotations-options {
 			visibility: visible;
 			li {
 				visibility: visible;
 				opacity: 1;
+				margin-right: 5px;
 			}
 		}
 	}
