Fix pin/unpin icons

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/overlays-display-mode/overlays-display-mode.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/overlays-display-mode/overlays-display-mode.component.html
@@ -29,7 +29,7 @@
 			   [disabled]="disabled"/>
 
 		<label [for]="radioIds.switchFootprint" tooltip-class="bottom" tooltip-value="Overlays Footprint">
-			<i class="icon-tools-polygons"></i>
+			<i class="icon-frame-mode"></i>
 		</label>
 
 	</div>
