--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
@@ -49,7 +49,7 @@
 				[disabled]="isGeoOptionsDisabled"
 				[class.mode-on]="displayModeOn && !isGeoOptionsDisabled"
 				[class.active]="isExpand(subMenuEnum.overlays) && !isGeoOptionsDisabled">
-			<i class="icon-tools-polygons"></i>
+			<i class="icon-frame-mode"></i>
 		</button>
 
 		<ansyn-overlays-display-mode
