--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/slider-filter-container/slider-filter-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/slider-filter-container/slider-filter-container.component.less
@@ -18,7 +18,7 @@
 
 .slider {
 	/deep/ .ui-slider {
-		height: 17px;
+		height: 10px;
 		background: transparent;
 		margin: 0 10px 0 10px;
 		box-shadow: none;
@@ -38,7 +38,8 @@
 		z-index: 0;
 		border-radius: 50%;
 		background: white;
-		height: 17px !important; /* 3rd party component is using important */
+		height: 10px !important; /* 3rd party component is using important */
+		width: 10px !important; /* 3rd party component is using important */
 	}
 
 	/deep/ .ui-slider-handle-active {
@@ -47,7 +48,7 @@
 
 	/deep/ .ui-slider-range {
 		z-index: 0;
-		background: rgba(255, 255, 255, 0.75);;
+		background: @application-primary-color;
 
 	}
 
