--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-dimension-mode/imagery-dimension-mode.component.html
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-dimension-mode/imagery-dimension-mode.component.html
@@ -3,6 +3,6 @@
 			(click)="toggleMapDimentions()"
 			tooltip-value="2D / 3D"
 			[attr.tooltip-class]="'bottom right'">
-			{{ selectedMap }}
+			{{ moveToMap }}
 	</button>
 </div>
