feat: array filter

--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filter-container/filter-container.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filter-container/filter-container.component.html
@@ -43,6 +43,12 @@
 					[customData]="filter.customData"
 					(onMetadataChange)="onMetadataChange($event)">
 				</ansyn-boolean-filter-container>
+
+				<ansyn-array-filter-container
+					*ngSwitchCase="'Array'"
+					[metadata]="metadataFromState"
+					(onMetadataChange)="onMetadataChange($event)">
+				</ansyn-array-filter-container>
 			</div>
 		</div>
 
